--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 # The URL the site will be built for
 base_url = "https://maddyinadream.vercel.app"
+title = "Blog of Maddyinadream"
 theme = "zap"
 
 # Whether to automatically compile all Sass files in the sass directory
